--- a/scripts/telephone_ cleanning_Script.Rmd
+++ b/scripts/telephone_ cleanning_Script.Rmd
@@ -2266,21 +2266,7 @@ ibq <- ibq %>%
   # partial finished TC
   mutate(across(-c(id,ibq10_other_text), ~ifelse(id == "HR173", "-99", .))) 
 
-ibq_miss <- ibq %>%
-  mutate(across(-c(id,ibq10_other_text), as.numeric))%>%
-  select(id, ibq1:ibq7) %>%  # only ibq1:ibq7 was used to calculated ibq_total
-  pct_miss_fun(
-    id = c("id"),
-    n_items = 10
-  ) 
-
-ibq_miss %>% 
-  gt::gt() %>% 
-  gt::tab_header(
-    title = 'IBQ Missing Data',
-    subtitle = 'By Participant')
-
-ibq_remove <- ibq_miss %>% filter(miss_pct >= 30) %>% pull(id)
+# We are not applying missing rule on this measure
 ```
 
 ### IBQ Calculations & Subscale
@@ -2306,9 +2292,7 @@ ibq <- ibq %>%
 # IBQ Total Sum Score creation
 ibq_complete <-
   ibq_calc %>%
-  mutate(ibq_total = rowSums(select(., ibq1:ibq7), na.rm = T)) %>%
-  # Apply missing rule for ibq_total 
-  mutate_at(vars(ibq_total), ~case_when(id %in% ibq_remove ~ -99, TRUE ~ .))
+  mutate(ibq_total = rowSums(select(., ibq1:ibq7), na.rm = T)) 
 
 
 ## Pull in missing values
